[project]
name = "isaaclab"
version = "2.2.1"
requires-python = ">=3.11"
dependencies = [
    "numpy<2",
    "torch>=2.7",
    "onnx>=1.18.0",
    "prettytable==3.3.0",
    "toml",
    "hidapi==0.14.0.post2",
    "gymnasium==1.2.0",
    "trimesh",
    "pyglet<2",
    "transformers",
    "einops",
    "warp-lang",
    "pillow==11.2.1",
    "starlette==0.45.3",
    "pytest",
    "pytest-mock",
    "junitparser",
    "flatdict==4.0.1",
    "flaky",
    "numpy<2",
    "torch>=2.7",
    "torchvision>=0.14.1",
    "protobuf!=5.26.0,>=4.25.8",
    "hydra-core",
    "h5py",
    "tensorboard",
    "moviepy",
    "pillow==11.2.1",
    "numpy<2",
    "torch>=2.7",
    "torchvision>=0.14.1",
    "protobuf!=5.26.0,>=4.25.8",
    "tensorboard",
    "scikit-learn",
    "numba"
]

[project.optional-dependencies]
isaacsim = ["isaacsim[all,extscache]==5.0.0.*"]
sb3 = ["stable-baselines3>=2.6", "tqdm", "rich"]
skrl = ["skrl>=1.4.3"]
rsl-rl = ["rsl-rl-lib==2.3.3"]
all = ["stable-baselines3>=2.6", "skrl>=1.4.3", "rsl-rl-lib==2.3.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Include all of the source code and apps in the wheel, matching
# the NVIDIA pip package
[tool.hatch.build.targets.wheel]
include = ["apps", "source", "isaaclab/__init__.py"]
exclude = ["docs"]

# Rewrite paths to match the NVIDIA pip package
[tool.hatch.build.targets.wheel.sources]
"apps" = "isaaclab/apps"
"source" = "isaaclab/source"

[tool.isort]

py_version = 310
line_length = 120
group_by_package = true

# Files to skip
skip_glob = ["docs/*", "logs/*", "_isaac_sim/*", ".vscode/*"]

# Order of imports
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "ASSETS_FIRSTPARTY",
    "FIRSTPARTY",
    "EXTRA_FIRSTPARTY",
    "TASK_FIRSTPARTY",
    "LOCALFOLDER",
]

# Extra standard libraries considered as part of python (permissive licenses
extra_standard_library = [
    "numpy",
    "h5py",
    "open3d",
    "torch",
    "tensordict",
    "bpy",
    "matplotlib",
    "gymnasium",
    "gym",
    "scipy",
    "hid",
    "yaml",
    "prettytable",
    "toml",
    "trimesh",
    "tqdm",
    "torchvision",
    "transformers",
    "einops" # Needed for transformers, doesn't always auto-install
]
# Imports from Isaac Sim and Omniverse
known_third_party = [
    "isaacsim.core.api",
    "isaacsim.replicator.common",
    "omni.replicator.core",
    "pxr",
    "omni.kit.*",
    "warp",
    "carb",
    "Semantics",
]
# Imports from this repository
known_first_party = "isaaclab"
known_assets_firstparty = "isaaclab_assets"
known_extra_firstparty = [
    "isaaclab_rl",
    "isaaclab_mimic",
]
known_task_firstparty = "isaaclab_tasks"
# Imports from the local folder
known_local_folder = "config"

[tool.pyright]

include = ["source", "scripts"]
exclude = [
    "**/__pycache__",
    "**/_isaac_sim",
    "**/docs",
    "**/logs",
    ".git",
    ".vscode",
]

typeCheckingMode = "basic"
pythonVersion = "3.11"
pythonPlatform = "Linux"
enableTypeIgnoreComments = true

# This is required as the CI pre-commit does not download the module (i.e. numpy, torch, prettytable)
# Therefore, we have to ignore missing imports
reportMissingImports = "none"
# This is required to ignore for type checks of modules with stubs missing.
reportMissingModuleSource = "none" # -> most common: prettytable in mdp managers

reportGeneralTypeIssues = "none"       # -> raises 218 errors (usage of literal MISSING in dataclasses)
reportOptionalMemberAccess = "warning" # -> raises 8 errors
reportPrivateUsage = "warning"


[tool.codespell]
skip = '*.usd,*.svg,*.png,_isaac_sim*,*.bib,*.css,*/_build'
quiet-level = 0
# the world list should always have words in lower case
ignore-words-list = "haa,slq,collapsable,buss"
# todo: this is hack to deal with incorrect spelling of "Environment" in the Isaac Sim grid world asset
exclude-file = "source/isaaclab/isaaclab/sim/spawners/from_files/from_files.py"
